Update graceful shutdown with k8s. Add new file on MKDocs usage.
Signed-off-by: Joost van der Griendt <j.vandergriendt@flusso.nl>